# modern-apis-with-fastapi

./: pyproject.toml
