[tool.poetry]
name = "modern-apis-with-fastapi"
version = "0.1.0"
description = ""
authors = ["michael@talkpython.fm"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
httpx = "^0.23.0"
Jinja2 = "^3.1.2"
aiofiles = "^0.8.0"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
